18 Fixing Asset page graphics overflowing because of border-radius

--- a/src/assets/styles/components/asset-info.scss
+++ b/src/assets/styles/components/asset-info.scss
@@ -25,6 +25,8 @@
 	}
 
 	&__section:first-of-type {
+		border-top-left-radius: 0;
+		border-top-right-radius: 0;
 		overflow: unset;
 	}
 
@@ -47,7 +49,6 @@
 	// video/image and link to OpenSea
 	&__graphics-container {
 		border-bottom: 1px solid rgba($black, 0.15);
-		border-radius: $section-border-radius;
 		min-height: 200px;
 		position: relative;
 		width: 100%;
